fixing image margin so spacing classes work again

--- a/less/style.less
+++ b/less/style.less
@@ -199,9 +199,9 @@ div.wp-caption {
 	margin: 0;
 }
 
-// .single article img,.single article p img,.single article p img.alignnone {
-//     margin: 10px 0;
-// }
+.single article img,.single article p img,.single article p img.alignnone {
+    padding: 10px 0;
+}
 
 /*.half-width {
 	width: 50%;
